--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://DecoCrafttech.github.io/Truck-message-dynamic",
   "name": "truck",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "ajv": "^8.17.1",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.1.1",
     "html-react-parser": "^5.1.12",
     "js-cookie": "^3.0.5",
     "owl.carousel": "^2.3.4",
@@ -37,6 +39,8 @@
     "wowjs": "^1.1.3"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
